implementacion de configuracion cors

--- a/frontend/src/app/pages/favoritos/favoritos.page.html
+++ b/frontend/src/app/pages/favoritos/favoritos.page.html
@@ -12,7 +12,7 @@
         <ion-card-title>Inicia sesión</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Debes iniciar sesión para crear una reseña.</p>
+        <p>Debes iniciar sesión para visualizar tus favoritos.</p>
         <ion-button expand="block" (click)="irALogin()">
           Ir a inicio de sesión
         </ion-button>
