--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content [style.backgroundColor]="'var(--ion-color-background)'">
+<ion-content>
   <div class="contenido-home">
     <h1>Página principal</h1>
 
