--- a/frontend/src/app/pages/resenas/resenas.page.scss
+++ b/frontend/src/app/pages/resenas/resenas.page.scss
@@ -1,10 +1,10 @@
 ion-content.resenas-page {
-  --background: #1e1e1e;
-  color: #ffffff;
+  --background: var(--ion-background-color);
+  color: var(--ion-text-color);
   padding: 1rem;
 
   p {
-    color: #fff;
+    color: var(--ion-text-color);
     text-align: center;
     margin-bottom: 20px;
   }
@@ -13,9 +13,9 @@ ion-content.resenas-page {
     display: flex;
     width: 1200px;
     margin: 10px auto;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    background-color: #2a2a2a;
+    background-color: var(--resena-card-bg)!important;
     cursor: default;
     align-items: stretch;
     height: auto;
@@ -59,7 +59,7 @@ ion-content.resenas-page {
         .estrellas,
         .usuario {
           font-size: 14px;
-          color: #bbb;
+          color: var(--ion-color-medium);
           white-space: nowrap;
         }
 
@@ -69,7 +69,7 @@ ion-content.resenas-page {
           ion-icon {
             cursor: default;
             margin-right: 0.25rem;
-            color: #555;
+            color: var(--ion-color-step-400);
 
             &.filled {
               color: #ffd700;
@@ -99,14 +99,14 @@ ion-content.resenas-page {
 
           .likes-count {
             font-size: 14px;
-            color: #ccc;
+            color: var(--ion-color-medium);
           }
         }
       }
 
       .comentario {
         font-size: 16px;
-        color: #ddd;
+        color: var(--ion-text-color);
         margin-top: 8px;
 
         display: -webkit-box;
@@ -116,7 +116,6 @@ ion-content.resenas-page {
 
         overflow: hidden;
         text-align: left;
-
         white-space: normal;
         word-break: break-word;
         overflow-wrap: break-word;
@@ -136,7 +135,7 @@ ion-content.resenas-page {
 
       .fechas {
         font-size: 14px;
-        color: #888;
+        color: var(--ion-color-medium);
         display: flex;
         gap: 20px;
         justify-content: flex-end;
@@ -157,15 +156,13 @@ ion-content.resenas-page {
 
     .like-icon {
       font-size: 24px;
-      color: #e74c3c;
+      color: var(--ion-color-danger);
       cursor: pointer;
     }
 
     .likes-count {
       font-size: 16px;
-      color: #fff;
+      color: var(--ion-text-color);
     }
   }
-
-
 }
